# space-invaders-game

./: Cargo.toml  Dioxus.toml  README.md
assets/styling/: main.css
src/: lib.rs  main.rs
src/game/: logic.rs  mod.rs  state.rs
src/game/entities/: alien.rs  mod.rs  mystery_ship.rs  player.rs  projectile.rs  shield.rs
src/input/: key_states.rs  mod.rs
src/rendering/: game.rs  mod.rs  score_board.rs  screens.rs  star_background.rs
src/rendering/sprites/: alien_sprite.rs  mod.rs  mystery_ship_sprite.rs  player_sprite.rs  projectile_sprite.rs  shield_sprite.rs
src/utils/: position.rs
tests/: alien_formation_test.rs  game_component_test.rs  game_logic_test.rs  key_states_test.rs  mystery_ship_test.rs  player_test.rs  position_test.rs  projectile_test.rs  score_board_test.rs  screens_test.rs  shield_test.rs  star_background_test.rs  state_test.rs
