[package]
name = "space_invaders"
version = "0.1.0"
authors = ["nightblood18 <114045738+nightblood18@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
rand = "0.8.5"
instant = "0.1"
tokio = { version = "1", features = ["time"] }
dioxus-desktop = "0.6.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[lib]
name = "space_invaders"
path = "src/lib.rs"
